--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -3,7 +3,7 @@ name: Greetings
 on: [pull_request_target, issues]
 
 jobs:
-  greeting:
+  greeting: 
     runs-on: [ubuntu-latest,windows-latest,macOS-latest]
     permissions:
       issues: write
@@ -12,5 +12,6 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
+        greeting: "Hey **#** from Watermrk repo"
         issue-message: "This is your first issue.  "
         pr-message: "Message that will be displayed on users' first pull request"
